2007-02-10  Eli Zaretskii  <eliz@gnu.org>

	* info-look.el (info-lookup-make-completions): Bind
	Info-fontify-maximum-menu-size to nil to speed up lookup of index
	nodes.

	* info.el (Info-fontify-maximum-menu-size): Document the effect of a
	nil value.
	(Info-fontify-node): Make sure Info-fontify-maximum-menu-size is
	non-nil before using it as size.

2007-02-09  Chong Yidong  <cyd@stupidchicken.com>

	* subr.el (insert-for-yank-1): Prevent read-only properties from
	interfering with text property operations.

	* image-mode.el (image-mode): Revert 2007-01-30 changes.

	* image.el (image-type-auto-detectable): Don't autodetect x[pb]m.
	(image-type-auto-detected-p): Fail if another match is found in
	auto-mode-alist.

	* files.el (magic-mode-alist): Call image-mode instead of
	image-mode-maybe for autodetected images.

2007-02-09  Juanma Barranquero  <lekktu@gmail.com>

	* mail/smtpmail.el (smtpmail-smtp-service, smtpmail-queue-index-file):
	Fix typos in docstrings.
	(smtpmail-local-domain, smtpmail-queue-mail): Doc fixes.

2007-02-09  Kim F. Storm  <storm@cua.dk>

	* emacs-lisp/float-sup.el: Remove obsolete comment.

2007-02-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-sanity-check-hunk): Fix last fix.

2007-02-08  Karl Fogel  <kfogel@red-bean.com>

	* simple.el: Revert previous change, at request of RMS:
	(fundamental-mode-hook): Remove.
	(fundamental-mode): Run after-change-major-mode-hooks manually,
	and don't run the now-nonexistent fundamental-mode-hook.

2007-02-08  Karl Fogel  <kfogel@red-bean.com>

	* simple.el (fundamental-mode-hook): Declare new hook.
	(fundamental-mode): Run the new dedicated hook, and don't run
	after-change-major-mode-hooks manually anymore.

2007-02-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-svn.el (vc-svn-merge-news): Understand the new format with two
	added columns of chars.  Remove support for the "no-meta-info" format.
	Prompted by Romain Francoise <romain@orebokech.com>.
