@@ -1,3 +1,8 @@
+2007-02-10  Jay Belanger  <belanger@truman.edu>
+
+	* calculator.el (calculator): Do more extensive checking for when
+	3 lines should be used for the calculator.
+
 2007-02-10  Eli Zaretskii  <eliz@gnu.org>
 
 	* info-look.el (info-lookup-make-completions): Bind
